# axum-movie-server

./: .env  .gitignore  Cargo.toml  README.md  load_env.sh  logfile  main.py  test.py
migrations/2023-05-26-181801_movies/: down.sql  up.sql
movies_db/: postgresql.conf  postmaster.opts  postmaster.pid
movies_db/base/14041/: 13865
movies_db/base/14042/: 2619
movies_db/global/: 1260  2676  pg_control
movies_db/pg_stat/: global.stat
src/: main.rs  schema.rs
tests/: sentence.py  test.py
