[package]
name = "axum-moviesdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.1", features = ["full"] }
axum = { version = "0.6.18", features = ["macros"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1"
axum-macros = "0.3.7"
tokio-postgres = "0.7.8"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.37"
bb8 = "0.8.0"
diesel-async = { version = "0.3.0", features = ["bb8", "postgres"] }
diesel = "2.1.0"
